--- a/views/content/how-works.html
+++ b/views/content/how-works.html
@@ -3,75 +3,136 @@
     <img src="img/banners/how.jpg" alt="">
     <h2 class="text-uppercase get-center white font-semibold">How It Works</h2>
   </div>
-    <div class="container">
-      <div class="invest">
-    <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/one.jpg"></span>invest in your health</h2>
-      <ul class="breadcrumb">
-    <li class="invest-info">
-       <figure>
-         <img src="img/works/comp.png" alt="computer">
-       </figure>
-       <h3>Sign up on our website</h3>
-    </li>
-    <li class="invest-info">
-      <figure>
-      <img src="img/works/heart.png" alt="computer">
-    </figure>
-    <h3>Choose a Health Plan</h3>
-    <p>Can’t decide which plan to choose? Don’t worry; our experts are available via email, message, Whatsapp or call. Share your health issues and health goals with us and we will help you identify the perfect plan for you.</p>
-  </li>
-    <li class="invest-info">
-      <figure>
-      <img src="img/works/hand.png" alt="computer">
-    </figure>
-    <h3>Join our Health Plan</h3>
-    <p>We accept mastercard or visa debit/ credit cards and bank/ wire transfer</p>
-    </li>
-</ul>
-</div>
-<div class="hand-holding">
-  <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/two.jpg"></span>Hand-Holding</h2>
-    <ul class="breadcrumb">
-  <li class="invest-info">
-    <figure>
-    <img src="img/works/meeting.png" alt="meeting">
-  </figure>
-  <h3>Choose a Health Plan</h3>
-  <p>Can’t decide which plan to choose? Don’t worry; our experts are available via email, message, Whatsapp or call. Share your health issues and health goals with us and we will help you identify the perfect plan for you.</p>
-</li>
-<li class="invest-info">
-  <figure>
-  <img src="img/works/talk.png" alt="talk">
-</figure>
-<h3>Choose a Health Plan</h3>
-<p>Can’t decide which plan to choose? Don’t worry; our experts are available via email, message, Whatsapp or call. Share your health issues and health goals with us and we will help you identify the perfect plan for you.</p>
-</li>
-<li class="invest-info">
-  <figure>
-  <img src="img/works/map.png" alt="computer">
-</figure>
-<h3>Choose a Health Plan</h3>
-<p>Can’t decide which plan to choose? Don’t worry; our experts are available via email, message, Whatsapp or call. Share your health issues and health goals with us and we will help you identify the perfect plan for you.</p>
-</li>
-</div>
-  <div class="row feelfabulous">
-    <div class="feelfit">
-      <h2 class="text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/five.jpg"></span>feel fit,feel fabulous</h2>
-      <div class="col-md-6">
-        <div class="stairs text-center">
-          <figure>
-            <img src="img/works/stairs.png" alt="stairs">
-          </figure>
-        </div>
-        <p>We are there by your side till you reach your health goals. We empower you to make the healthiest choices. Invest in your health today and reap the returns for a lifetime!</p>
+  <div class="container">
+    <div class="invest">
+    <div class="row">
+      <div class="col-md-offset-1 col-md-10">
+          <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/one.jpg"></span>invest in your health</h2>
       </div>
-      <div class=" col-md-4">
-        <div class="packages text-center">
-          <h2 class="about text-uppercase text-center text-bold  font-semibold">YOU CAN FIND OUT ABOUT <br>OUR HEALTH PACKAGES HERE</h2>
-          <button type="button" class="btn btn btn-primary text-uppercase font-primary letter-space">click here</button>
+    </div>
+<div class="row">
+  <div class="col-md-offset-1 col-md-10">
+    <ul class="breadcrumb">
+      <li class="invest-info1">
+        <figure>
+          <img src="img/works/comp.png" alt="computer">
+        </figure>
+        <h3 class="text-center">Sign up on our website</h3>
+      </li>
+      <li class="invest-info2">
+        <figure>
+          <img src="img/works/heart.png" alt="computer">
+        </figure>
+        <h3 class="text-center">Choose a Health Plan</h3>
+        <p>Can’t decide which plan to choose? Don’t worry; our experts are available via email, message, Whatsapp or call. Share your health issues and health goals with us and we will help you identify the perfect plan for you.</p>
+      </li>
+      <li class="invest-info3">
+        <figure>
+          <img src="img/works/hand.png" alt="computer">
+        </figure>
+        <h3 class="text-center">Join our Health Plan</h3>
+        <p>We accept mastercard or visa debit/ credit cards and bank/ wire transfer</p>
+      </li>
+    </ul>
+  </div>
+</div>
+    </div>
+    <div class="profile">
+      <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/two.jpg"></span>Build your Selfcare Profile</h2>
+      <ul class="breadcrumb">
+        <li class="investing-info1">
+          <figure>
+            <img src="img/works/profile.png" alt="meeting">
+          </figure>
+          <h3 class="text-center">Complete your Personal Profile Form</h3>
+          <p>Help us understand your lifestyle, diet, exercise regime and medical history.</p>
+        </li>
+        <li class="investing-info2">
+          <figure>
+            <img src="img/works/blood.png" alt="talk">
+          </figure>
+          <h3 class="text-center">Share your Blood Reports</h3>
+          <p>To help us analyse any medical conditions and vitamin deficiencies.</p>
+        </li>
+      </ul>
+    </div>
+    <div class="Design">
+      <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/three.jpg"></span>Health Design</h2>
+      <ul class="breadcrumb">
+        <li class="invest-infos1">
+          <figure>
+            <img src="img/works/diet.png" alt="meeting">
+          </figure>
+          <h3 class="text-center">Personalised Diet</h3>
+          <p>We design a diet keeping in mind your lifestyle, dietary preferences and local food availablity.</p>
+        </li>
+        <li class="invest-infos2">
+          <figure>
+            <img src="img/works/schedule.png" alt="talk">
+          </figure>
+          <h3 class="text-center">Exercise Schedule</h3>
+          <p>We recommend an exercise schedule that will supplement your diet and fit into your daily routine.</p>
+        </li>
+        <li class="invest-infos3">
+          <figure>
+            <img src="img/works/vitamin.png" alt="map">
+          </figure>
+          <h3 class="text-center">Vitamin Check</h3>
+          <p>We recommend and monitor your vitamin intake. In case of any ailments, we also recommend medical guidance.</p>
+        </li>
+        <li class="invest-infos4">
+          <figure>
+            <img src="img/works/guidlines.png" alt="map">
+          </figure>
+          <h3 class="text-center">Selfcare Guidelines</h3>
+          <p>Our Must Do's. We believe these guidelines are the foundation of a healthy lifestyle.</p>
+        </li>
+      </ul>
+    </div>
+    <div class="hand-holding">
+      <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/four.jpg"></span>Hand-Holding</h2>
+      <ul class="breadcrumb">
+        <li class="invest-info1">
+          <figure>
+            <img src="img/works/meeting.png" alt="meeting">
+          </figure>
+          <h3 class="text-center">Weekly Virtual Meeting</h3>
+          <p>We will have weekly telephonic or video calls to monitor your progress. After assessing your weight chart and diet &amp; exercise recall sheet, we revise your diet and exercise plan.</p>
+        </li>
+        <li class="invest-info2">
+          <figure>
+            <img src="img/works/talk.png" alt="talk">
+          </figure>
+          <h3 class="text-center">Daily Support</h3>
+          <p>Don't know what to eat during a movie or at your favourite restaurant? Ask us! We are available for all your queries on Whatsapp, message or call.</p>
+        </li>
+        <li class="invest-info3">
+          <figure>
+            <img src="img/works/map.png" alt="map">
+          </figure>
+          <h3 class="text-center">Travel &amp; Holiday Guide</h3>
+          <p>Frequent work trips or your annual vacay - We recommend diets based on the country your visiting including what to eat on the flight.</p>
+        </li>
+      </ul>
+    </div>
+    <div class="row feelfabulous">
+      <div class="feelfit">
+        <h2 class="text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/five.jpg"></span>feel fit,feel fabulous</h2>
+        <div class="col-md-6">
+          <div class="stairs text-center">
+            <figure>
+              <img src="img/works/stairs.png" alt="stairs">
+            </figure>
+          </div>
+          <p>We are there by your side till you reach your health goals. We empower you to make the healthiest choices. Invest in your health today and reap the returns for a lifetime!</p>
+        </div>
+        <div class=" col-md-4">
+          <div class="packages text-center">
+            <h2 class="about text-uppercase text-center text-bold  font-semibold">YOU CAN FIND OUT ABOUT <br>OUR HEALTH PACKAGES HERE</h2>
+            <button type="button" class="btn btn btn-primary text-uppercase font-primary letter-space">click here</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 </section>
