--- a/views/content/how-works.html
+++ b/views/content/how-works.html
@@ -38,7 +38,13 @@
 </div>
     </div>
     <div class="profile">
+      <div class="row">
+        <div class="col-md-offset-1 col-md-10">
       <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/two.jpg"></span>Build your Selfcare Profile</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-offset-1 col-md-10">
       <ul class="breadcrumb">
         <li class="investing-info1">
           <figure>
@@ -56,8 +62,16 @@
         </li>
       </ul>
     </div>
+  </div>
+</div>
     <div class="Design">
+      <div class="row">
+        <div class="col-md-offset-1 col-md-10">
       <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/three.jpg"></span>Health Design</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-offset-1 col-md-10">
       <ul class="breadcrumb">
         <li class="invest-infos1">
           <figure>
@@ -89,8 +103,16 @@
         </li>
       </ul>
     </div>
+  </div>
+</div>
     <div class="hand-holding">
+      <div class="row">
+        <div class="col-md-offset-1 col-md-10">
       <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/four.jpg"></span>Hand-Holding</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-offset-1 col-md-10">
       <ul class="breadcrumb">
         <li class="invest-info1">
           <figure>
@@ -115,9 +137,14 @@
         </li>
       </ul>
     </div>
+  </div>
+</div>
     <div class="row feelfabulous">
       <div class="feelfit">
+        <div class="row">
+          <div class="col-md-offset-1 col-md-10">
         <h2 class="text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/five.jpg"></span>feel fit,feel fabulous</h2>
+        <div class="row">
         <div class="col-md-6">
           <div class="stairs text-center">
             <figure>
@@ -126,13 +153,16 @@
           </div>
           <p>We are there by your side till you reach your health goals. We empower you to make the healthiest choices. Invest in your health today and reap the returns for a lifetime!</p>
         </div>
-        <div class=" col-md-4">
+        <div class=" col-md-5">
           <div class="packages text-center">
             <h2 class="about text-uppercase text-center text-bold  font-semibold">YOU CAN FIND OUT ABOUT <br>OUR HEALTH PACKAGES HERE</h2>
             <button type="button" class="btn btn btn-primary text-uppercase font-primary letter-space">click here</button>
           </div>
         </div>
       </div>
+    </div>
+    </div>
+  </div>
     </div>
   </div>
 </section>
