--- a/views/content/how-works.html
+++ b/views/content/how-works.html
@@ -107,7 +107,7 @@
 </div>
     <div class="hand-holding">
       <div class="row">
-        <div class="col-md-offset-1 col-md-10">
+        <div class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 ">
       <h2 class=" text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/four.jpg"></span>Hand-Holding</h2>
     </div>
   </div>
@@ -142,7 +142,7 @@
     <div class="row feelfabulous">
       <div class="feelfit">
         <div class="row">
-          <div class="col-md-offset-1 col-md-10">
+          <div class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10">
         <h2 class="text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/five.jpg"></span>feel fit,feel fabulous</h2>
         <div class="row">
         <div class="col-md-6  col-sm-7 col-xs-12">
