alignment of how it works rectified

--- a/views/content/how-works.html
+++ b/views/content/how-works.html
@@ -139,11 +139,13 @@
     </div>
   </div>
 </div>
-    <div class="row feelfabulous">
+    <div class="feelfabulous">
       <div class="feelfit">
         <div class="row">
           <div class="col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10">
         <h2 class="text-uppercase text-bold letter-space font-semibold"><span><img src="img/works/five.jpg"></span>feel fit,feel fabulous</h2>
+          </div>
+        </div>
         <div class="row">
         <div class="col-md-6  col-sm-7 col-xs-12">
           <div class="stairs text-center">
@@ -161,8 +163,6 @@
         </div>
       </div>
     </div>
-    </div>
   </div>
     </div>
-  </div>
 </section>
