--- a/views/content/how-works.html
+++ b/views/content/how-works.html
@@ -115,24 +115,30 @@
     <div class="col-md-offset-1 col-md-10">
       <ul class="breadcrumb">
         <li class="invest-info1">
-          <figure>
+          <div class="min-height">
+            <figure>
             <img src="img/works/meeting.png" alt="meeting">
           </figure>
           <h3 class="text-center text-bold">Weekly Virtual Meeting</h3>
+        </div>
           <p>We will have weekly telephonic or video calls to monitor your progress. After assessing your weight chart and diet &amp; exercise recall sheet, we revise your diet and exercise plan.</p>
         </li>
         <li class="invest-info2">
+          <div class="min-height">
           <figure>
             <img src="img/works/talk.png" alt="talk">
           </figure>
           <h3 class="text-center text-bold">Daily Support</h3>
+        </div>
           <p>Don't know what to eat during a movie or at your favourite restaurant? Ask us! We are available for all your queries on Whatsapp, message or call.</p>
         </li>
         <li class="invest-info3">
+              <div class="min-height">
           <figure>
             <img src="img/works/map.png" alt="map">
           </figure>
           <h3 class="text-center text-bold">Travel &amp; Holiday Guide</h3>
+        </div>
           <p>Frequent work trips or your annual vacay - We recommend diets based on the country your visiting including what to eat on the flight.</p>
         </li>
       </ul>
